--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -46,11 +46,11 @@ Responsibilities: Dev Ops + Threading
 
 '''
 
-=== Benson Meier
-image::yl_coder.jpg[width="150", align="left"]
-{empty}[http://github.com/yl-coder[github]] [<<johndoe#, portfolio>>]
+=== Kevin Leonardo
+image::kevin.jpg[width="150", align="left"]
+{empty}[http://github.com/k-l-a[github]]
 
 Role: Developer +
-Responsibilities: UI
+Responsibilities: Logic + Storage
 
 '''
